--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> This is version 5 Github</h1>
+    <h1> This is version 6</h1>
 </body>
 </html>
